--- a/memoryGame.css
+++ b/memoryGame.css
@@ -33,7 +33,7 @@ h1, h3, button {
 
 h1, h3 {
     font-size: 1.5rem;
-    animation: slide-in 1000ms;
+    animation: slide-in 1s;
 }
 
 #totalToWin {
